estrucutra basica del ejercicio

--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-<h1>Git</h1>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem accusamus qui, libero rem mollitia officia esse adipisci praesentium, enim, sequi dolore nam. Qui atque libero veniam est magnam eius nulla.</p>
 
-<p></p>
-<P>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit eaque corporis eos cumque fugiat excepturi odio, ut illum perspiciatis delectus numquam illo natus est dignissimos quibusdam aliquam ea non saepe!
-    Aperiam rem laborum odit sunt nobis minima quo. Labore ducimus, ex saepe amet eos porro vero nulla optio consequatur ipsa inventore sint, eius dignissimos temporibus corporis, dolor deleniti nam consequuntur.
-    Sint architecto ad expedita eaque praesentium sed quia aliquam soluta sit voluptatum, sequi adipisci perspiciatis corrupti illo illum cum? Molestias repellendus impedit mollitia quis harum autem dolorum quidem culpa nisi.
-    Quos sunt nam delectus quod voluptatem? Ullam soluta vel, expedita iusto delectus eum mollitia. Facere aspernatur, perspiciatis doloribus provident qui animi ratione, cupiditate officiis ad possimus debitis optio dolor dolorum.
-    Totam, nulla libero quod voluptatum ea voluptatibus? Dicta eveniet earum, unde dolor nam vitae eum quod, impedit officia incidunt voluptatem, nesciunt tenetur beatae. Labore, tenetur! Eaque neque quisquam in vero!
-    Explicabo vero autem ducimus hic, accusamus asperiores atque repudiandae natus ipsam dolores voluptates nulla iste, ex, debitis odit commodi libero cupiditate voluptatibus nobis praesentium repellat? Veritatis fugit nisi temporibus maiores.
-    Doloribus, ratione ea placeat deleniti necessitatibus dolorem delectus nostrum, voluptates asperiores, sunt fuga blanditiis aut nesciunt dolores similique! Voluptate incidunt nulla dolor corporis perferendis deleniti saepe aliquid iure blanditiis ex?
-    Reiciendis, maxime aspernatur! Placeat error ad optio distinctio quia nemo magnam maxime, deserunt ea id culpa qui totam. Eveniet sint quos reprehenderit! Reprehenderit itaque sequi harum optio iure perferendis rerum.
-    Iure enim blanditiis inventore placeat excepturi reiciendis dolor, esse a explicabo quisquam doloremque aspernatur quibusdam pariatur praesentium magnam repellendus modi illo cum adipisci iusto facere earum nobis neque sunt? Sapiente?
-    Accusamus ducimus architecto ipsum asperiores earum minima molestiae necessitatibus est incidunt. Optio consequuntur rem, blanditiis consequatur excepturi eaque illum dignissimos repellendus nam dolor est debitis nobis. Quod, quasi. Molestiae, voluptate!
-</P>
+<header>
+    <nav>
+        <ul>
+            <li class="nav-item"> 
+                <a href="/pages/examples/example-1.html">Ejemplo 1</a></li>
+            <li class="nav-item"> 
+                <a href="/pages/examples/example-2.html">Ejemplo 2</a></li>
+            <li class="nav-item"> 
+                <a href="/pages/examples/example-3.html">Ejemplo 3</a></li>
+        </ul>
+
+        <h1>Display Grid</h1>
+
+    </nav>
+</header>
+
 
 </body>
 </html>
